Modified the pom.xml and the project structure to automatically make new versions; added other files